enable lwjgl for native image